@@ -77,7 +77,7 @@
 
                             if (value == 'Allow') {
 
-                                return '<img width= "12px"; src="{{ request.static_url("stalker:static/stalker/images/icon-small-check.gif") }}">';
+                                return '<img width= "12px"; src="{{ request.static_url("stalker_pyramid:static/stalker/images/icon-small-check.gif") }}">';
                             }
                             return '';
                         }
