@@ -25,7 +25,7 @@
     <div id='group_avatar'
          class='thumbnail'>
         {% if not group.thumbnail %}
-            <img src='{{ request.static_url("stalker:static/stalker/images/Placeholder_Team.jpg") }}'
+            <img src='{{ request.static_url("stalker_pyramid:static/stalker/images/Placeholder_Team.jpg") }}'
                  alt=''
                  style='width:auto; height:150px;'>
         {% else %}
