@@ -24,7 +24,7 @@
 <div id='user_avatar'
      class='thumbnail'>
     {% if not user.thumbnail %}
-        <img src='{{ request.static_url("stalker:static/stalker/images/Placeholder_0.png") }}'
+        <img src='{{ request.static_url("stalker_pyramid:static/stalker/images/Placeholder_0.png") }}'
              alt=''
              style='width:auto; height:150px;'>
     {% else %}
