@@ -24,7 +24,7 @@
                 <td rowspan='2'>
                     <div id='avatar'>
                         {% if not logged_in_user.thumbnail %}
-                            <img src='{{ request.static_url("stalker:static/stalker/images/Placeholder_0.png") }}'
+                            <img src='{{ request.static_url("stalker_pyramid:static/stalker/images/Placeholder_0.png") }}'
                                  alt=''
                                  style='width:90px; height: auto;'>
                         {% else %}
