@@ -23,7 +23,7 @@
     <div id='department_avatar'
          class='thumbnail'>
         {% if not department.thumbnail %}
-            <img src='{{ request.static_url("stalker:static/stalker/images/Placeholder_Team.jpg") }}'
+            <img src='{{ request.static_url("stalker_pyramid:static/stalker/images/Placeholder_Team.jpg") }}'
                  alt=''
                  style='width:auto; height:150px;'>
         {% else %}
