@@ -76,7 +76,7 @@
                         },
                         formatter: function (object) {
 
-                            var path = '{{ request.static_url("stalker:static/stalker/images/Placeholder_shot.png") }}';
+                            var path = '{{ request.static_url("stalker_pyramid:static/stalker/images/Placeholder_shot.png") }}';
                             if (object.thumbnail_path) {
                                 path = object.thumbnail_path;
                             }
