@@ -4,7 +4,7 @@
     <div id='task_avatar'
          class='thumbnail'>
         {% if not task.thumbnail %}
-            <img src='{{ request.static_url("stalker:static/stalker/images/Placeholder_shot.png") }}'
+            <img src='{{ request.static_url("stalker_pyramid:static/stalker/images/Placeholder_shot.png") }}'
                  alt=''
                  style='width:auto; height:150px;'>
         {% else %}
