@@ -22,7 +22,7 @@
     {# Avatar #}
     <div id='version_thumbnail' class='thumbnail'>
         {% if not version.thumbnail %}
-            <img src='{{ request.static_url("stalker:static/stalker/images/Placeholder_0.png") }}'
+            <img src='{{ request.static_url("stalker_pyramid:static/stalker/images/Placeholder_0.png") }}'
                  alt=''
                  style='width:120px; height: auto;'>
         {% else %}
